# NoSQL-B3

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yml
backend/: Cargo.toml  Dockerfile
backend/src/: config.rs  db.rs  error.rs  importer.rs  lib.rs  main.rs  models.rs  repo.rs
backend/src/musicbrainz/: client.rs  mod.rs  models.rs
backend/src/routes/: artists.rs  graph.rs  import.rs  mod.rs  recordings.rs  releases.rs  search.rs  stats.rs
data/: README.md  seed.json
docs/: analysis.md  api.md  data-model.md
frontend/: .env.example  Dockerfile  README.md  index.html  nginx.conf  package.json
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: client.ts  types.ts
frontend/src/components/: ArtistCard.tsx  BarChart.tsx  GraphView.tsx  Layout.tsx  StatTile.tsx
frontend/src/pages/: ArtistDetail.tsx  Artists.tsx  GraphPage.tsx  Home.tsx  Search.tsx  Stats.tsx  Tracks.tsx
frontend/src/styles/: app.css  charts.css
